@@ -36,6 +36,9 @@ Extension Modules
 
 - bsddb module updated to version 4.6.4.
 
+- issue2858: Fix potential memory corruption when bsddb.db.DBEnv.lock_get
+  and other bsddb.db object constructors raised an exception.
+
 - Fixed #2870: cmathmodule.c compile error
 
 Library
